data/derived/comb/progs/unify/prog1225.ml.out
Characters 135-149:
  (hd*i mod 10)::(hd*i/10 + mBDhelper i tl)
                            ^^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type int
